--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springdemos?serverTimezone=UTC
+spring.datasource.username=springdemos
+spring.datasource.password=newPass
+spring.jpa.show-sql=true
+server.port=8082  
