--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=microservice-user
-spring.datasource.url=jdbc:mysql://172.24.158.190:3306/springdemos?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://172.24.158.190:3306/springdemos?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://172.18.0.2:3306/springdemos?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springdemos?serverTimezone=UTC
 spring.datasource.username=springdemos
 spring.datasource.password=newPass
 spring.jpa.show-sql=true
